# cobra

./: .gitignore  CMakeLists.txt  README.md  config.yaml
examples/aladdinsane/: aladdinsane.yaml
examples/iristar/: gen_scene.py  iristar.yaml
examples/simple/: config.yaml
include/: Arc.h  Canvas.h  Colors.h  Edge.h  Object.h  Point.h  Rasterizer.h  Scene.h  stb_image_write.h
src/: Canvas.cpp  Colors.cpp  Edge.cpp  Object.cpp  Rasterizer.cpp  Scene.cpp  main.cpp
